--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,17 @@ h1, h2, h3, h4, h5 {font-family:'Exo 2', sans-serif;}
 .nav-masthead .nav-link:hover, .nav-masthead .nav-link:focus { border-bottom-color: rgba(255, 255, 255, .25); }
 .nav-masthead .nav-link + .nav-link { margin-left: 1rem; }
 .nav-masthead .active { color: #fff; border-bottom-color: #fff; }
+.cover-home {height: 100%;}
 
 /*footer*/
 .foot-logo {max-width: 150px; height: auto; opacity: 0.5}
 .foot-logo:hover {opacity: 0.9}
+ @media (min-width: 768px) {
+
+}
+ @media (max-width: 500px) {
+.home-body .home-top-section::before { height: auto; position:relative;}
+.home-body .home-top-section .cover-container,.home-body .home-top-section .container.cover-home{height: auto !important;
+    position: relative !important;}
+}
 
